Publish Post source/_posts/角色卡.md by Qexo

--- a/source/_posts/角色卡.md
+++ b/source/_posts/角色卡.md
@@ -1,11 +1,13 @@
 ---
 abbrlink: ''
-categories: []
+categories:
+- - 资源分享
 comments: true
 date: '2025-04-13T17:04:13.765311+08:00'
 donate: true
 share: true
-tags: []
+tags:
+- 资源分享
 title: 角色卡
 toc: true
 updated: '2025-04-13T17:04:46.103+08:00'
